2021-07-16  Kyle Piddington  <kpiddington@apple.com>

        Build Default Metal library offline
        https://bugs.webkit.org/show_bug.cgi?id=227333

        <rdar://79923371>

        This patch compiles and creates a Metal library at build time, storing
        the library as a compiled binary file. This library is baked into the dylib, 
        and is loaded at context creation time.

        Unlike the previous version of this patch, this patch does not save or store the .metallib on disk, but rather
        bakes it into a binary.
        
        Reviewed by Kenneth Russell.

        * ANGLE.xcodeproj/project.pbxproj:
        * Configurations/ANGLE-dynamic.xcconfig:
        * src/libANGLE/renderer/metal/DisplayMtl.mm:
        (rx::DisplayMtl::initializeShaderLibrary):
        * src/libANGLE/renderer/metal/mtl_utils.h:

2021-07-15  Kyle Piddington  <kpiddington@apple.com>

        WebGL2 demo doesn't work due to failing compilation to metal backend
        https://bugs.webkit.org/show_bug.cgi?id=226865
	
        Fix translation of struct-arrays to contain the array type as well.
        Reviewed by Dean Jackson.

        * src/compiler/translator/TranslatorMetalDirect/SeparateCompoundStructDeclarations.cpp:

2021-07-13  Kyle Piddington  <kpiddington@apple.com>

        rAF driven WebGL submits excessive amount of GPU work when frames are slow
        https://bugs.webkit.org/show_bug.cgi?id=227059

        Reviewed by Dean Jackson.

        Advertise GL_ARB_sync for the Metal backend.
    Since GL_ARB_sync is core in OpenGL ES 3.0 and the Metal backend advertises OpenGL ES 3.0,
    the API must be working already.

        Limit in-flight WebGL frames to three frames. Do not continue preparation for display
    until the commands for the oldest frame have been executed by the GPU.

        This limits the impact slow frames have, especially in the
    case where the compositor skip frames and WebKit would issue a new slow frame