@@ -1,20 +1,0 @@
-#include "Version.xcconfig"
-#include "WebKitTargetConditionals.xcconfig"
-
-PRODUCT_NAME = ANGLEMetalLib;
-SKIP_INSTALL = YES;
-
-HEADER_SEARCH_PATHS = include src src/common/third_party/numerics third_party/base src/common/third_party/base third_party/zlib/google;
-
-ANGLE_HEADERS_FOLDER_PATH = /usr/local/include/ANGLE;
-
-PUBLIC_HEADERS_FOLDER_PATH = $(ANGLE_HEADERS_FOLDER_PATH);
-PUBLIC_HEADERS_FOLDER_PATH[sdk=macosx*] = $(PUBLIC_HEADERS_FOLDER_PATH_$(WK_PLATFORM_NAME));
-PUBLIC_HEADERS_FOLDER_PATH_macosx = $(ANGLE_HEADERS_FOLDER_PATH);
-PUBLIC_HEADERS_FOLDER_PATH_maccatalyst = $(WK_ALTERNATE_FRAMEWORKS_DIR)/$(ANGLE_HEADERS_FOLDER_PATH);
-
-MTL_ENABLE_DEBUG_INFO = INCLUDE_SOURCE
-MTL_FAST_MATH = YES
-
-STRIP_INSTALLED_PRODUCT = YES;
-STRIP_INSTALLED_PRODUCT[config=Debug] = NO;
